--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Easybuoy/webauth-i-challenge#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "connect-session-knex": "^1.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "knex": "^0.19.0",
     "sqlite3": "^4.0.9"
   },
